# swe-adaptive

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  pyproject.toml
construction/: archived_repos_run1.json  archived_repos_run2.json  auto_benchmark.py  find_archived_repos.py
eval/: analyze_runs.py  config.yaml  mini_config.yaml  parse_trajectories.py  run_eval.py
eval/instances/: instances.json
eval/prompts/: task_prompt.txt
eval/results/: analysis.md  summary.md
instances/: README.md
instances/0xSpaceShard_starknet-devnet-deprecated/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/Autodesk_aomi/: BENCHMARK.md  Dockerfile.test
instances/COALAIP_pycoalaip/: BENCHMARK.md  Dockerfile.test
instances/DarkCat09_python-aternos/: BENCHMARK.md  Dockerfile.test
instances/Detrous_darksky/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/FeatureBaseDB_python-pilosa/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/FederalLab_OpenFed/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/Gsllchb_Handright/: BENCHMARK.md
instances/IBM_spacetech-kubesat/: .dockerignore  BENCHMARK.md  Dockerfile.test
instances/InseeFrLab_torch-fastText/: BENCHMARK.md  Dockerfile.test
instances/JetBrains_projector-installer/: BENCHMARK.md  Dockerfile.test
instances/LuminosoInsight_exquisite-corpus/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/MaibornWolff_dcos-deploy/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/MantisAI_hugie/: BENCHMARK.md  Dockerfile.py313  Dockerfile.test
instances/NCAR_PyReshaper/: BENCHMARK.md  Dockerfile.test
instances/NimbleBoxAI_ChainFury/: BENCHMARK.md  Dockerfile.test
instances/OpenXbox_xbox-smartglass-core-python/: BENCHMARK.md
(+842 files in other folders)
