[build-system]
requires = ["setuptools>=67.0", "wheel>=0.40.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swe-adaptive"
version = "1.0.0"
description = "A benchmark dataset for agentic adaptive maintenance of Python projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = [
    "software maintenance",
    "benchmark",
    "large language models",
    "Python migration",
    "adaptive maintenance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
eval = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "litellm>=1.40.0",
]
construction = [
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
    "docker>=7.0.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ANONYMOUS/swe-adaptive"
Repository = "https://github.com/ANONYMOUS/swe-adaptive"
Issues = "https://github.com/ANONYMOUS/swe-adaptive/issues"
Documentation = "https://github.com/ANONYMOUS/swe-adaptive#readme"
